<resources>
    <string name="app_name">Mi Cámara</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="guardar">Guardar</string>
    <string name="modo_claro">Modo Claro</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="descripcion">Descripción</string>
    <string name="modo_activado">Modo Oscuro automático activado</string>
    <string name="idioma_esp">Español</string>
    <string name="idioma_ing">English</string>
</resources>
